# MemoryKernel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING_GUIDE.md  TODO.md  bench_ivf.py  pyproject.toml  requirements.txt  setup.py  skills-lock.json
.github/workflows/: ci.yml  release-nodejs.yml  release-python.yml
.memk/: .gitignore  manifest.json
bench/: dataset.py  deep_stress_test.py  graph_bench.py  ingestion.py  metrics.py  retrieval.py  runner.py  stress_enterprise.py  stress_enterprise_final.py  sync_bench.py
benchmarks/: README.md  embedding_telemetry.json  output.txt  results.json  run_bench.py  run_output.txt  stress_test.py  tail_report.json
docs/: README.md  agent_setup.md  api_v1.md  architecture.md  architecture_notes.md  backup_restore.md  benchmarking.md  compatibility.md  delta_sync_gc_plan.md  example_apps.md  mcp_tools.md  phase1_benchmark.md  phase4_hybrid_recovery_review.md  phase_delta_sync_hardening_review.md  phase_delta_sync_review.md  quickstart_first_10_minutes.md  release.md  troubleshooting.md  upgrade_guide.md
examples/: ai_coding_assistant.py  architecture_v2_demo.py  generation_tracking_demo.py  git_ingestion_demo.py  local_agent_demo.py  performance_benchmark.py  quality_test.py  quick_benchmark.py  quick_test.py  research_notebook_memory.py  sdk_python_agent.py  sdk_python_basic.py  simple_perf_test.py  stress_test.py  super_stress_test.py  support_assistant_memory.py  terminal_workflow.sh
knowledge/: architecture.md  index.md  user.md
memk/: __init__.py
memk/api/: __init__.py  models.py  v1.py
memk/cli/: __init__.py  main.py
memk/consolidation/: consolidator.py  (+1 more)
scripts/: benchmark_phase1.py  smoke_install.py
tests/: test_async_pipeline.py  test_builder.py  test_cli_backup_restore.py  test_conflict_detection.py  test_conflict_record.py  test_conflict_resolver.py  test_consolidation.py  test_daemon_auth.py  test_daemon_soak.py  test_db.py  test_embedder_selection.py  test_extractor.py  test_graph_index.py  test_graph_integration.py  test_graph_propagation.py  test_graph_repository.py  test_graph_retrieval.py  test_hybrid_retriever.py  test_hybrid_sync_lifecycle.py  test_large_scale_graph_sync_stress.py  test_mcp_server.py  test_merkle_cleanup.py  test_merkle_recovery.py  test_metrics_collector.py  test_migration_v5.py  test_oplog_gc.py  test_performance_profile.py  test_rejuvenation.py  test_replica_checkpoint.py  test_replica_health.py  test_retriever.py  test_sharding_setup.py  test_spacy_extractor.py  test_sync_hardening_stress.py  test_sync_hlc.py  test_sync_merkle.py  test_sync_protocol.py  test_sync_stats.py
(+68 files in other folders)
