[project]
name = "memk"
version = "0.1.0"
description = "Local-first memory infrastructure library for AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.7.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.7.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "requests>=2.31.0"
]

[project.scripts]
memk = "memk.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
